fixing mobile styles on iOS

--- a/mobile-style.css
+++ b/mobile-style.css
@@ -40,6 +40,7 @@ html, body {
 
 .navbar, .fixed, .menu, li.logo{
     transition: all 0.3s;
+    -webkit-transition: all 0.3s;
 }
 
 .navbar {
@@ -148,6 +149,7 @@ li.logo {
     z-index: 1;
     border-radius: 20px;
     transition: all 0.5s;
+    -webkit-transition: all 0.5s;
 }
 
 .hovered{
@@ -156,6 +158,7 @@ li.logo {
     width: 100%;
     opacity: 100%;
     transition: all 0.5s;
+    -webkit-transition: all 0.5s;
 }
 
 .project-contents {
@@ -192,6 +195,7 @@ li.logo {
 
 .pro-image {
     margin-top: 350px;
+    width: 10%;
 }
 
 /* .project-heading {
@@ -209,6 +213,7 @@ li.logo {
     height: 20px;
     font-size: 74px;
     transition: ease 0.2s;
+    -webkit-transition: ease 0.2s;
 }
 
 .hovered h1 {
