--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ html, body {
 
 .navbar, .fixed, .menu, li.logo{
     transition: all 0.3s;
+    -webkit-transition: all 0.3s;
 }
 
 .navbar {
@@ -92,6 +93,7 @@ li.logo {
 .fixed li.logo {
     max-width: 100px;
     transition: all 0.3s;
+    -webkit-transition: all 0.3s;
 }
 
 .fixed .menu {
@@ -155,6 +157,7 @@ li.logo {
     z-index: 1;
     border-radius: 20px;
     transition: all 0.5s;
+    -webkit-transition: all 0.5s;
 }
 
 .hovered{
@@ -163,6 +166,7 @@ li.logo {
     width: 100%;
     opacity: 100%;
     transition: all 0.5s;
+    -webkit-transition: all 0.5s;
 }
 
 .project-contents {
@@ -198,7 +202,7 @@ li.logo {
 
 .pro-image {
     margin-top: 175px;
-    width: 30%;
+    width: 10%;
 }
 
 /* .project-heading {
@@ -216,6 +220,7 @@ li.logo {
     height: 20px;
 
     transition: ease 0.2s;
+    -webkit-transition: ease 0.2s;
 }
 
 img[src="images/me.png"] {
